--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
  <p>
        <h3>Tools & Platforms</h3>
  <p>
-       Jira, Miro, Figma, Python, Kaggle, Gemini, REST APIs, OCI, GCP.
+       Gemini, Chat GPT, Claude, NoteLM, Gamma, Jira, Figma, Python, Kaggle, OCI, GCP.
    <p></p>
     </p>
     </div>
@@ -297,6 +297,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
