--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       <h3>Customer Master Data Integration</h3>
       <p>
         Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
+        <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
         <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
       </p>
     </div>
@@ -297,6 +298,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
