--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
       <p>
         Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
         <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
+      <p>
+      ✅ 99% reduction in data discrepancies
+      ✅ 50% faster order processing
+      ✅ 20% reduction in customer support tickets  
+      </p>
+      <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
       </p>
     </div>
 
@@ -142,8 +147,15 @@
       <h3>Heavy Duty Parts Catalog Integration</h3>
       <p>
         Semaless catalog ingestion integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
+        <p>As Product Manager & Program Lead, I drove end-to-end heavy-duty parts catalog integration into CxCommerce using real-time APIs and AI-powered product matching, improving update speed by 30%, increasing conversion rates by 15%, cutting order errors by over 75%, and achieving full ROI within six months.</p>
         <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">More...</a>
-        
+        <p>
+          ✅ 30% faster product data updates
+          ✅ 20% reduction in order processing time
+          ✅ 15% increase in conversion rate
+          ✅ 25% improvement in customer satisfaction
+          ✅ ROI achieved within the first 6 months
+        </p>
       </p>
     </div>
 
@@ -298,6 +310,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
