--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
       <h3>Product Recommendation</h3>
       <p>
         Drives sales and redefining customer engagement with the power of machine learning.
+       <P>As Product Manager & AI Commerce Program Lead, I launched an AI-powered product recommendation engine that increased AOV by 20%, boosted cross-sell revenue by 35%, improved conversion by 15%, and cut manual sales effort by 50% through behavioral data, ML models, and optimized in-journey placement.
+<P>
+      ✅ 20% increase in Average Order Value (AOV)
+      ✅ 35% growth in cross-sell revenue
+      ✅ 50% reduction in manual sales effort
+      ✅ 15% increase in conversion rate</P> 
+     </P>
         <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Boosting-Revenue-with-AI-Powered-Product-Recommendations.pdf" target="_blank">More...</a>
       </p>
     </div>
@@ -310,6 +317,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
