--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
    <p></p>
     </p>
     </div>
-
-
     
 <div class="card">
   <h2>Live Implementations</h2>
@@ -178,6 +176,7 @@
       <h3>Dynamic Pricing</h3>
       <p>
         Dynamic pricing explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
+        Dynamic pricing allows businesses to react to various market changes—from seasonal trends and competitor pricing to supply and demand—enabling sophisticated, real-time pricing decisions that work for both the seller and the buyer. It operates like a financial nervous system, constantly monitoring the environment and adjusting the price "temperature" to achieve optimal economic balance.
         <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">More...</a>
         
       </p>
@@ -317,6 +316,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
