--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <h3>Dynamic Pricing</h3>
       <p>
         Dynamic pricing explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
-        Dynamic pricing allows businesses to react to various market changes—from seasonal trends and competitor pricing to supply and demand—enabling sophisticated, real-time pricing decisions that work for both the seller and the buyer. It operates like a financial nervous system, constantly monitoring the environment and adjusting the price "temperature" to achieve optimal economic balance.
+        Dynamic pricing allows businesses to react to various market changes-from seasonal trends and competitor pricing to supply and demand-enabling sophisticated, real-time pricing decisions that work for both the seller and the buyer. It operates like a financial nervous system, constantly monitoring the environment and adjusting the price "temperature" to achieve optimal economic balance.
         <P>
         <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">More...</a>
         </P>
@@ -186,8 +186,20 @@
    <div class="card">
       <h3>Mobile Field Service</h3>
       <p>
-        Demonstrates Oracle Field Service integrated with third-party vendors via robust APIs, enabling real-time coordination and streamlined field operations.
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">More...</a>
+      The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
+      Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
+      <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
+     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
+     <P>✅ 40–80 minutes of daily admin time eliminated per technician
+        ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
+        ✅ 18% improvement in workforce utilization
+        ✅ 82% first-time fix rate
+        ✅ 18% increase in service profitability
+        ✅ 21% year-over-year service revenue growth
+        ✅ Major reduction in fuel, overtime, and truck-roll costs
+        ✅ Significant increase in customer satisfaction and retention
+        ✅ Higher technician morale and reduced turnover</P>
+     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">More...</a>
         
       </p>
     </div>
@@ -317,6 +329,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
