--- a/index.html
+++ b/index.html
@@ -217,11 +217,7 @@
       <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
   </div>
 
-<!--  <div class="card">  -->
-<!--  <h2><a href="https://avasudev18.github.io/PFolioAV.github.io/passion.html" style="text-decoration: none; color: inherit;">Passion</a></h2> -->
-<!--  <ul> -->
-<!--  </ul> -->
-<!-- </div> -->
+
  <!-- NEW SECTION START -->
        <div class="card">
      <h2>AI-Powered Agentic Workflow to Optimize Interview Preparation</h2>
@@ -297,7 +293,18 @@
     🌐 6. Strategy Roadmap</a>
       </p>
     </div>
-    
+
+    </div>
+  <div class="card">
+      <h2>Professional Experience Highlights</h2>
+      <ul>
+        <li><strong>PhaseZero Ventures</strong> – Director, Product Management (2022–Today)</li>
+        <li><strong>Accenture</strong> – Consulting Architect Manager (2021–2022)</li>
+        <li><strong>Oracle</strong> – Senior Principal Product Manager (2007–2020)</li>
+      </ul>
+      <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
+  </div>
+
     <div class="card">
       <h2>Certifications</h2>
       <ul>
@@ -329,6 +336,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
