--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
       <p>
         <h3>Product Leadership </h3>
         <p>
-        Roadmaps, GTM strategy, requirements, prioritization frameworks, cross-functional alignment, stakeholder influence.
- <p>
+         Roadmaps, GTM strategy, requirements, prioritization frameworks, cross-functional alignment, stakeholder influence.
+        <p>
        <h3>AI / Machine Learning</h3>
- <p>
-       AI agents, generative AI workflows, RAG pipelines, recommendation models, catalog intelligence, predictive analytics.
- <p>
-       <h3>Enterprise Systems</h3>
- <p>
-       Oracle Field Service, Oracle Cloud, Infor, Karmak, DST, large-scale ERP commerce workflows.
- <p>
-       <h3>Customer Success Leadership</h3>
- <p>
-       Adoption, retention, renewal strategy, onboarding workflows, NPS improvement, support optimization.
- <p>
-       <h3>Tools & Platforms</h3>
- <p>
+       <p>
+        AI agents, generative AI workflows, RAG pipelines, recommendation models, catalog intelligence, predictive analytics.
+       <p>
+        <h3>Enterprise Systems</h3>
+       <p>
+         Oracle Field Service, Oracle Cloud, Infor, Karmak, DST, large-scale ERP commerce workflows.
+       <p>
+        <h3>Customer Success Leadership</h3>
+       <p>
+        Adoption, retention, renewal strategy, onboarding workflows, NPS improvement, support optimization.
+       <p>
+        <h3>Tools & Platforms</h3>
+       <p>
        Gemini, Chat GPT, Claude, NoteLM, Gamma, Jira, Figma, Python, Kaggle, OCI, GCP.
-   <p></p>
-    </p>
+       <p></p>
+       </p>
     </div>
     
 <div class="card">
@@ -280,31 +280,45 @@
      </div>
     </div>
 <!--============ Thought Leadership & Innovation Lab Section Ends ====================================================== --> 
-    </div>
-  <div class="card">
-      <h2>Professional Experience Highlights</h2>
-      <ul>
+    <!</div> ====--->
+<div class="card">
+    <h2>Certifications & Credentials</h2>
+    <ul>
+  <div class="cards-container">
+     <div class="card">
+       <h2>Professional Experience Highlights</h2>
+       <ul>
         <li><strong>PhaseZero Ventures</strong> – Director, Product Management (2022–Today)</li>
         <li><strong>Accenture</strong> – Consulting Architect Manager (2021–2022)</li>
         <li><strong>Oracle</strong> – Senior Principal Product Manager (2007–2020)</li>
-      </ul>
-      <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
-  </div>
+       </ul>
+       <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
+     </div>
 
     <div class="card">
       <h2>Certifications</h2>
       <ul>
-       <li>Oracle Fusion AI Agent Studio Foundations Associate (2025)-including designing agent workflows, implementing RAG-based knowledge retrieval, configuring multi-agent orchestration, and applying GenAI capabilities
-</li>
-        <li>Oracle Cloud Infrastructure (OCI) 2025 AI Vector Search Certified Professional – advanced indexing (HNSW, IVF), similarity search and retrieval‑augmented generation (RAG) solutions
-</li>
-        <li>OCI 2025 Generative AI Professional – comprehensive credential covering generative AI models and applications on Oracle Cloud Infrastructure
-</li>
-        <li>OCI 2025 Certified AI Foundations Associate – AI, machine learning and deep learning fundamentals, OCI AI services and Oracle 23ai
-</li>
-        <li>Generative AI (ChatGPT), Machine Learning, Executive Data Science</li>
-        <li>Cloud Architecture (AWS, Azure, GCP)</li>
-        <li>Technology for Product Managers, Chatbot Essentials</li>
+        <li>
+          Oracle Fusion AI Agent Studio Foundations Associate (2025)-including designing agent workflows, implementing RAG-based knowledge retrieval, configuring multi-agent orchestration, and applying GenAI capabilities
+       </li>
+       <li>
+          Oracle Cloud Infrastructure (OCI) 2025 AI Vector Search Certified Professional – advanced indexing (HNSW, IVF), similarity search and retrieval‑augmented generation (RAG) solutions
+         </li>
+        <li>
+          OCI 2025 Generative AI Professional – comprehensive credential covering generative AI models and applications on Oracle Cloud Infrastructure
+        </li>
+        <li>
+          OCI 2025 Certified AI Foundations Associate – AI, machine learning and deep learning fundamentals, OCI AI services and Oracle 23ai
+        </li>
+        <li>
+            Generative AI (ChatGPT), Machine Learning, Executive Data Science
+        </li>
+        <li>
+          Cloud Architecture (AWS, Azure, GCP)
+        </li>
+        <li>
+          Technology for Product Managers, Chatbot Essentials
+        </li>
       </ul>
     </div>
 
@@ -314,14 +328,17 @@
         <li>M.S. in Information Science – Colorado Tech University</li>
         <li>M.S. in Physics – Mahatma Gandhi University, India</li>
       </ul>
-    </div>
+     </div>
+   </div>
+  </div>
   </section>
-
+<!--============ FOOTER  Section====================================================== --> 
   <footer>
     &copy; 2025 Anil Vasudevakurup — Built with passion for technology and customer success
   </footer>
 </body>
 </html>
+
 
 
 
