--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
      </div>
     </div>
 <!--============ Thought Leadership & Innovation Lab Section Ends ====================================================== --> 
-    <!</div> ====--->
+    </div>
 <div class="card">
     <h2>Certifications & Credentials</h2>
     <ul>
@@ -338,6 +338,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
