--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
          </p>
        </div>
      <div class="card">
-         <h2>Experiments: Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
+         <h2>Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
          <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
          alt="Smart Gardner" 
          style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
@@ -338,6 +338,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
