--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
   </header>
 
   <section>
-  
+<!--============ ABOUT ME ===================================================== --> 
     <div class="card">
        <img src="https://avasudev18.github.io/PFolioAV.github.io/LinkedIn Photo.jpg" 
-     alt="Anil Vasudev" 
-     style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
-      <h2>About Me</h2>
-      <p>
+       alt="Anil Vasudev" 
+       style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
+       <h2>About Me</h2>
+        <p>
         I am a strategic product executive who builds intelligent, scalable solutions at the intersection of AI, Field Service, Digital Commerce, and Cloud SaaS. Over the past 15+ years, I’ve guided global teams and complex enterprise programs across Oracle, HP, and high-growth SaaS environments—earning a reputation for transforming ambiguity into strategy, and strategy into measurable business outcomes.
- <p>
+        <p>
         My work sits at the core of how organizations operate. I’ve led the design and delivery of cloud-native products that streamline field service operations, modernize B2B eCommerce, and integrate seamlessly with ERP ecosystems such as Infor, Karmak, SAP, and DST. I understand how data, workflow automation, and customer experience come together to create meaningful competitive advantage.
- <p>
+        <p>
         With hands-on expertise in Oracle Field Service (OFS/OFSC), AI-driven automation, and AWS/Azure integration, I specialize in turning complex operational and technical landscapes into intuitive, high-performing products. My teams and I have delivered results that matter40% efficiency improvements, double-digit revenue acceleration, and retention rates above 80% by staying grounded in customer needs and aligned with business strategy.
- <p>
+        <p>
         What I enjoy most is building clarity, collaboration, and momentum across engineering, design, sales, and customer success. I lead with empathy, analytical rigor, and a bias for action, ensuring that every product decision moves the business forward while enabling teams to perform at their highest level.
- <p>
+        <p>
         I am driven by the belief that great products don’t just solve problems—they elevate organizations, empower users, and create long-term value. That is the mindset I bring to every role, every customer, and every product I help shape.
        </p>
-      <p>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/AnilVasudevakurup_PM_CSM_122025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 View Resume </a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 View Product Portfolio</a>
+       <p>
+       <a href="https://avasudev18.github.io/PFolioAV.github.io/AnilVasudevakurup_PM_CSM_122025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 View Resume </a>
+       <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 View Product Portfolio</a>
       </p>
     </div>
-    
+<!--============ CORE EXPERTISE ===================================================== --> 
     <div class="card">
       <h2>Core Expertise</h2>
       <p>
@@ -120,6 +120,7 @@
        <p></p>
        </p>
     </div>
+<!--============ Live Implementations  ====================================================== --> 
     
 <div class="card">
   <h2>Live Implementations</h2>
@@ -338,6 +339,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
