--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
         I am driven by the belief that great products don’t just solve problems—they elevate organizations, empower users, and create long-term value. That is the mindset I bring to every role, every customer, and every product I help shape.
        </p>
        <p>
-       <a href="https://avasudev18.github.io/PFolioAV.github.io/AnilVasudevakurup_PM_CSM_122025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-       🌐 View Resume </a>
+        <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 LinkedIn</a>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/AnilVasudevakurup_PM_CSM_122025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 Download Resume </a>
        <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-       🌐 View Product Portfolio</a>
+       🌐 Product Portfolio</a>
       </p>
     </div>
 <!--============ CORE EXPERTISE ===================================================== --> 
@@ -339,6 +341,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
