--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
    <div class="cards-container">
   
       <div class="card">
-        <h3>Customer Master Data Integration</h3>
+        <h3>eCommerce Systems & Integrations: Customer Master Data Integration</h3>
         <p>
          Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
          <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
@@ -145,7 +145,7 @@
     </div>
 
   <div class="card">
-      <h3>Heavy Duty Parts Catalog Integration</h3>
+      <h3>eCommerce Systems & Integrations: Heavy Duty Parts Catalog Integration</h3>
       <p>
         Semaless catalog ingestion integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
         <p>As Product Manager & Program Lead, I drove end-to-end heavy-duty parts catalog integration into CxCommerce using real-time APIs and AI-powered product matching, improving update speed by 30%, increasing conversion rates by 15%, cutting order errors by over 75%, and achieving full ROI within six months.</p>
@@ -161,7 +161,7 @@
     </div>
 
      <div class="card">
-      <h3>Product Recommendation</h3>
+      <h3>eCommerce Systems & Integrations: Product Recommendation</h3>
       <p>
         Drives sales and redefining customer engagement with the power of machine learning.
        <P>As Product Manager & AI Commerce Program Lead, I launched an AI-powered product recommendation engine that increased AOV by 20%, boosted cross-sell revenue by 35%, improved conversion by 15%, and cut manual sales effort by 50% through behavioral data, ML models, and optimized in-journey placement.
@@ -176,7 +176,7 @@
     </div>
   
    <div class="card">
-      <h3>Dynamic Pricing</h3>
+      <h3>eCommerce Systems & Integrations: Dynamic Pricing</h3>
       <p>
         Dynamic pricing explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
         Dynamic pricing allows businesses to react to various market changes-from seasonal trends and competitor pricing to supply and demand-enabling sophisticated, real-time pricing decisions that work for both the seller and the buyer. It operates like a financial nervous system, constantly monitoring the environment and adjusting the price "temperature" to achieve optimal economic balance.
@@ -187,7 +187,7 @@
     </div>
 
    <div class="card">
-      <h3>Mobile Field Service</h3>
+      <h3>Oracle Field Service: Mobile Field Service</h3>
       <p>
       The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
@@ -341,6 +341,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
