--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
      <div class="card">
        <h2>Professional Experience Highlights</h2>
        <ul>
-        <li><strong>PhaseZero Ventures</strong> – Director, Product Management (2022–Today): Led CxCommerce roadmap; increased online revenue by 20%, reduced support tickets by 45%.</li>
-        <li><strong>Accenture</strong> – Consulting Architect Manager (2021–2022):Architected OFSC solution across N business units, reduced dispatch time by 30%</li>
-        <li><strong>Oracle</strong> – Senior Principal Product Manager (2007–2020): Owned mobile field service product; improved customer satisfaction; adoption in APAC, EMEA, US, LATAM regions</li>
+        <li><strong>PhaseZero Ventures</strong> – Director, Product Management (2022–Today) <li> Led CxCommerce roadmap; increased online revenue by 20%, reduced support tickets by 45%.</li></li>
+        <li><strong>Accenture</strong> – Consulting Architect Manager (2021–2022) <li>Architected OFSC solution across N business units, reduced dispatch time by 30%</li></li>
+        <li><strong>Oracle</strong> – Senior Principal Product Manager (2007–2020)<li>Owned mobile field service product; improved customer satisfaction; adoption in APAC, EMEA, US, LATAM regions</li></li> 
        </ul>
        <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
      </div>
@@ -341,6 +341,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
