--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
        </div>
      <div class="card">
          <h2>Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" target="_blank">
+         <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg"
+         alt="Smart Gardner"
+           
          <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
          alt="Smart Gardner" 
          style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
@@ -333,6 +337,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
