--- a/index.html
+++ b/index.html
@@ -207,6 +207,28 @@
     </div>
    </ul>
 </div>
+ <!--============ Executive Leadership in Customer Success & Growth ============================================= --> 
+
+<div class="card">
+  <h2>Executive Leadership in Customer Success & Growth</h2>
+  <ul>
+    <div class="cards-container">
+       <div class="card">
+        <h3>Executive Leadership in Customer Success & Growth</h3>
+        <p>
+         Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
+         <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
+       <p>
+         ✅ 99% reduction in data discrepancies
+         ✅ 50% faster order processing
+         ✅ 20% reduction in customer support tickets  
+       </p>
+       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
+       </p>
+     </div>
+   </div>
+    </div>
+
  <!--============ Thought Leadership & Innovation Lab Section ====================================================== --> 
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
@@ -335,6 +357,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
