--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
     <div class="cards-container">
        <div class="card">
         <h3>Executive Leadership in Customer Success & Growth</h3>
-        <p>
-         Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
-         <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
+        <p>This Mid-Market Customer Success Review reflects a highly disciplined, outcome-driven Customer Success operation designed to accelerate revenue, protect retention, and scale adoption with precision. Through a balanced strategy of managed services, automation, and proactive engagement, the organization achieved zero SLA breaches, reduced average resolution time from 35 days to under 10, and established structured engagement across 20 active tenants with predictable weekly through quarterly cadences. A robust performance framework now governs team execution through weighted CSAT, resolution speed, escalation control, and proactive actions, while a structured 30-60-90 day execution model ensures continuous value realization. The business is also strategically positioned for the future, with 25 customers classified across three Generative AI readiness tiers, active analytics deployments, and a fully automated HDA ingestion program. Collectively, these outcomes demonstrate a mature Director-level Customer Success operating model—one that converts support into a scalable revenue engine, churn prevention system, and long-term growth platform.
+        </p>
+         
        <p>
          ✅ 99% reduction in data discrepancies
          ✅ 50% faster order processing
@@ -357,6 +357,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
