--- a/index.html
+++ b/index.html
@@ -226,9 +226,12 @@
         </p>
          
        <p>
-         ✅ 99% reduction in data discrepancies
-         ✅ 50% faster order processing
-         ✅ 20% reduction in customer support tickets  
+         Service & Reliability
+         ✅SLA Compliance: 100% (Zero SLA breaches since March 7, 2024)
+         ✅Average Resolution Time: Reduced from 35 days → under 5 days
+         ✅First Response Time (FRT): Reduced under 5 minuutes
+         ✅First Contact Resolution (FCR): Reduced under 5 minuutes
+         ✅Escalation Rate: Reduced by 80%
        </p>
        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
        </p>
@@ -364,6 +367,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
