--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
         </p>
          
        <p>
-         Service & Reliability
+         Repeatable, Scalable, Reusable (RSR)  & KPIs </p)
          ✅SLA Compliance: 100% (Zero SLA breaches since March 7, 2024)
          ✅Average Resolution Time: Reduced from 35 days → under 5 days
          ✅First Response Time (FRT): Reduced under 5 minuutes
          ✅First Contact Resolution (FCR): Reduced under 5 minuutes
          ✅Escalation Rate: Reduced by 80%
        </p>
-       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
+       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a>
        </p>
      </div>
    </div>
@@ -367,6 +367,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
