--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
       <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
      <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
-     <P>✅ 40–80 minutes of daily admin time eliminated per technician
+        ✅ 40–80 minutes of daily admin time eliminated per technician
         ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
         ✅ 18% improvement in workforce utilization
         ✅ 82% first-time fix rate
@@ -371,6 +371,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
