--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         <p>
          Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
          <p>Led product strategy for enterprise customer master data integration, eliminating 99% of data inconsistencies, improving order processing by 50%, and reducing support tickets by 20% through API-driven automation and data governance.</p>
-       <p>
+       <p>KPIs</p>
+        <p>
          ✅ 99% reduction in data discrepancies
          ✅ 50% faster order processing
          ✅ 20% reduction in customer support tickets  
@@ -149,7 +150,8 @@
       <p>
         Semaless catalog ingestion integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
         <p>As Product Manager & Program Lead, I drove end-to-end heavy-duty parts catalog integration into CxCommerce using real-time APIs and AI-powered product matching, improving update speed by 30%, increasing conversion rates by 15%, cutting order errors by over 75%, and achieving full ROI within six months.</p>
-        <p>
+      <p>KPIs</p>  
+      <p>
           ✅ 30% faster product data updates
           ✅ 20% reduction in order processing time
           ✅ 15% increase in conversion rate
@@ -165,7 +167,8 @@
       <p>
         Drives sales and redefining customer engagement with the power of machine learning.
        <P>As Product Manager & AI Commerce Program Lead, I launched an AI-powered product recommendation engine that increased AOV by 20%, boosted cross-sell revenue by 35%, improved conversion by 15%, and cut manual sales effort by 50% through behavioral data, ML models, and optimized in-journey placement.
-      <P>
+      <p>KPIs</p>
+       <P>
       ✅ 20% increase in Average Order Value (AOV)
       ✅ 35% growth in cross-sell revenue
       ✅ 50% reduction in manual sales effort
@@ -193,6 +196,7 @@
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
       <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
      <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
+     <p>KPIs</p>
         ✅ 40–80 minutes of daily admin time eliminated per technician
         ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
         ✅ 18% improvement in workforce utilization
@@ -228,7 +232,8 @@
          </p>
       
        <p> Repeatable, Scalable, Reusable (RSR)  & KPIs </p) 
-       <p>
+       <p>KPIs</p>
+         <p>
          ✅SLA Compliance: 100% (Zero SLA breaches since March 7, 2024)
          ✅Average Resolution Time: Reduced from 35 days → under 5 days
          ✅First Response Time (FRT): Reduced under 5 minuutes
@@ -236,7 +241,7 @@
          ✅Escalation Rate: Reduced by 80%
        </p>
    <!---  <p><a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a> -->
-        <p><a href="https://github.com/avasudev18/PFolioAV.github.io/blob/main/Mid-Market-CSM-Weekly-Review%20April%2020.pdf" target="_blank">More...</a>
+        <p><a href="https://github.com/avasudev18/PFolioAV.github.io/blob/main/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a>
   
        </p>
      </div>
@@ -371,6 +376,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
