--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
          ✅Escalation Rate: Reduced by 80%
        </p>
    <!---  <p><a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a> -->
-        <p><a href="https://github.com/avasudev18/PFolioAV.github.io/blob/main/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a>
+        <p><a href="hhttps://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
   
        </p>
      </div>
@@ -376,6 +376,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
