--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@
          ✅First Contact Resolution (FCR): Reduced under 5 minuutes
          ✅Escalation Rate: Reduced by 80%
        </p>
-   <!---  <p><a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Mid-Market-CSM-Weekly-Review April 20.pdf" target="_blank">More...</a> -->
-        <p><a href="hhttps://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
-  
+       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
        </p>
      </div>
    </div>
@@ -376,6 +374,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
