--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
 <div class="card">
   <h2>Live Implementations</h2>
   <ul>
-
    <div class="cards-container">
-  
       <div class="card">
         <h3>eCommerce Systems & Integrations: Customer Master Data Integration</h3>
         <p>
@@ -218,12 +216,10 @@
   <ul>
     <div class="cards-container">
        <div class="card">
-        
          <h3>Executive Leadership in Customer Success & Growth</h3>
-          
         <p> 
         As Director of Customer Success, I inherited a mid-market portfolio operating in a high-growth environment with rising customer volume, increasing operational complexity, and inconsistent engagement cadence. Resolution cycles averaged 35 days, automation was limited, and there was no unified performance framework to govern service quality, retention risk, or expansion readiness.
-        </p>p>
+        </p>
         <p>
          I established a structured engagement model across 20 active tenants, introducing predictable weekly, biweekly, monthly, and quarterly cadences. I designed and deployed a weighted performance framework governing execution across CSAT, resolution speed, escalation control, and proactive actions, reinforced by a 30-60-90 execution model for continuous value realization. In parallel, I led fully automated HDA ingestion, expanded analytics deployments, and drove Generative AI readiness classification across 25 customers, ensuring the portfolio scaled with data-driven precision.
          </p>
@@ -244,8 +240,29 @@
        </p>
      </div>
    </div>
-    </div>
-
+  </div>
+ <!--============ CASE STUDIES SECTION======================================= --> 
+<div class="card">
+  <h2>Case Studies</h2>
+  <ul>
+    <div class="cards-container">
+       <div class="card">
+         <h3>Case Study 1: Driving 5x Revenue Growth Through Strategic Digital Transformation
+         </h3>
+        <p> 
+        As Director of Customer Success, I led Summit Commercial Vehicles' B2B e-commerce transformation, to implement an enterprise-grade digital commerce platform. This strategic initiative delivered exceptional results: 5x online sales growth, 68% increase in employee adoption, and 9x growth in platform searches—demonstrating measurable impact in customer experience optimization and digital transformation leadership.  
+       <p> Repeatable, Scalable, Reusable (RSR)  & KPIs </p) 
+       <p>KPIs</p>
+         <p>✅5X increase Online Sales Growth</p>
+         <p>✅68% increase in Employee Adoption</p>
+         <p>✅9X Search Volume Growth</p>
+         <p>✅7% Conversion Rate Lift</p>
+         <p>✅100% SEO Optimization</p>
+       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
+       </p>
+     </div>
+   </div>
+ </div>
  <!--============ Thought Leadership & Innovation Lab Section ====================================================== --> 
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
@@ -374,6 +391,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
