--- a/index.html
+++ b/index.html
@@ -258,9 +258,29 @@
          <p>✅9X Search Volume Growth</p>
          <p>✅7% Conversion Rate Lift</p>
          <p>✅100% SEO Optimization</p>
-       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
+       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/Driving-5x-Revenue-Growth-Through-Strategic-Digital-Transformation.pdf" target="_blank">More...</a>
        </p>
      </div>
+     <div class="card">
+      <h3>Case Study 2: Oracle Field Service: Mobile Field Service</h3>
+      <p>
+      The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
+      Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
+      <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
+     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
+     <p>KPIs</p>
+        ✅ 40–80 minutes of daily admin time eliminated per technician
+        ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
+        ✅ 18% improvement in workforce utilization
+        ✅ 82% first-time fix rate
+        ✅ 18% increase in service profitability
+        ✅ 21% year-over-year service revenue growth
+        ✅ Major reduction in fuel, overtime, and truck-roll costs
+        ✅ Significant increase in customer satisfaction and retention
+        ✅ Higher technician morale and reduced turnover</P>
+     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">More...</a>
+      </p>
+    </div>
    </div>
  </div>
  <!--============ Thought Leadership & Innovation Lab Section ====================================================== --> 
@@ -391,6 +411,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
