--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
       <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
-     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
+     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation in automated scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
      <p>KPIs</p>
         ✅ 40–80 minutes of daily admin time eliminated per technician
         ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
@@ -267,7 +267,7 @@
       The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
       <P>These challenges were negatively impacting profitability, customer satisfaction, workforce morale, and scalability.</P>
-     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using AI-driven scheduling, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
+     <P>As Product Manager & FSM Program Lead, I led a full-scale field service digital transformation using automated scheduling, integration with third party telemetry, mobile execution, and real-time analytics—improving first-time fix rate to 82%, increasing service profitability by 18%, accelerating billing by 30+ days, and driving 21% YoY service revenue growth.</P>
      <p>KPIs</p>
         ✅ 40–80 minutes of daily admin time eliminated per technician
         ✅ 30+ day reduction in billing cycles, dramatically improving cash flow
@@ -352,7 +352,7 @@
        </div>
      </div>
     </div>
-<!--============ Thought Leadership & Innovation Lab Section Ends ======================== --> 
+<!--============ Certifications & Credential Section  ======================== --> 
     </div>
 <div class="card">
     <h2>Certifications & Credentials</h2>
@@ -411,6 +411,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
