--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
        </p>
      </div>
      <div class="card">
-      <h3>Case Study 2: Oracle Field Service: Mobile Field Service</h3>
+      <h3>Case Study 2: Telemetry-Driven Field Operations (Oracle OFS)</h3>
       <p>
       The organization’s field operations were heavily burdened by: Manual paperwork and disconnected systems, Inefficient scheduling and reactive dispatching, Delayed invoicing and weak cash flow, Low first-time fix rates and rising operational costs, 
       Limited visibility for managers and poor technician enablement, Reactive customer service instead of proactive maintenance </P>
@@ -411,6 +411,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
