--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          ✅ 50% faster order processing
          ✅ 20% reduction in customer support tickets  
        </p>
-       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
+       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">Learn More...</a>
        </p>
     </div>
 
@@ -156,7 +156,7 @@
           ✅ 25% improvement in customer satisfaction
           ✅ ROI achieved within the first 6 months
         </p>
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">More...</a>    
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">Learn More...</a>    
      </p>
     </div>
 
@@ -172,7 +172,7 @@
       ✅ 50% reduction in manual sales effort
       ✅ 15% increase in conversion rate</P> 
       </P>
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Boosting-Revenue-with-AI-Powered-Product-Recommendations.pdf" target="_blank">More...</a>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Boosting-Revenue-with-AI-Powered-Product-Recommendations.pdf" target="_blank">Learn More...</a>
       </p>
     </div>
   
@@ -182,7 +182,7 @@
         Dynamic pricing explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
         Dynamic pricing allows businesses to react to various market changes-from seasonal trends and competitor pricing to supply and demand-enabling sophisticated, real-time pricing decisions that work for both the seller and the buyer. It operates like a financial nervous system, constantly monitoring the environment and adjusting the price "temperature" to achieve optimal economic balance.
         <P>
-        <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">More...</a>
+        <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">Learn More...</a>
         </P>
       </p>
     </div>
@@ -204,7 +204,7 @@
         ✅ Major reduction in fuel, overtime, and truck-roll costs
         ✅ Significant increase in customer satisfaction and retention
         ✅ Higher technician morale and reduced turnover</P>
-     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">More...</a>
+     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">Lean More...</a>
       </p>
     </div>
    </ul>
@@ -236,7 +236,7 @@
          ✅First Contact Resolution (FCR): Reduced under 5 minuutes
          ✅Escalation Rate: Reduced by 80%
        </p>
-       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">More...</a>
+       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">Learn More...</a>
        </p>
      </div>
    </div>
@@ -258,7 +258,7 @@
          <p>✅9X Search Volume Growth</p>
          <p>✅7% Conversion Rate Lift</p>
          <p>✅100% SEO Optimization</p>
-       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/Driving-5x-Revenue-Growth-Through-Strategic-Digital-Transformation.pdf" target="_blank">More...</a>
+       <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/Driving-5x-Revenue-Growth-Through-Strategic-Digital-Transformation.pdf" target="_blank">Learn More...</a>
        </p>
      </div>
      <div class="card">
@@ -278,7 +278,7 @@
         ✅ Major reduction in fuel, overtime, and truck-roll costs
         ✅ Significant increase in customer satisfaction and retention
         ✅ Higher technician morale and reduced turnover</P>
-     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">More...</a>
+     <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">Learn More...</a>
       </p>
     </div>
    </div>
@@ -411,6 +411,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
