--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
     <p>Director of Product Management | SaaS, AI, Field Service, ERP Integrations | Customer Success Leader</p>
     <p>
       📍 Denver, CO |
-      <a href="mailto:anilvasudev2001@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank">LinkedIn</a>
+<!--   <a href="mailto:anilvasudev2001@gmail.com" style="color:#2563eb;>Email</a> | -->
+<!--   <a href="mailto:anilvasudev2001@gmail.com" style="color:#2563eb;">Email</a> -->
+<!--   <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank">LinkedIn</a> -->
+
+      <a href="mailto:anilvasudev2001@gmail.com" style="color:#2563eb;">Email</a> |
+      <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank" style="color:#0a66c2;">LinkedIn</a>
+
+      
     </p>
   </header>
 
@@ -81,7 +87,7 @@
         <p>
         My work sits at the core of how organizations operate. I’ve led the design and delivery of cloud-native products that streamline field service operations, modernize B2B eCommerce, and integrate seamlessly with ERP ecosystems such as Infor, Karmak, SAP, and DST. I understand how data, workflow automation, and customer experience come together to create meaningful competitive advantage.
         <p>
-        With hands-on expertise in Oracle Field Service (OFS/OFSC), AI-driven automation, and AWS/Azure integration, I specialize in turning complex operational and technical landscapes into intuitive, high-performing products. My teams and I have delivered results that matter40% efficiency improvements, double-digit revenue acceleration, and retention rates above 80% by staying grounded in customer needs and aligned with business strategy.
+        With hands-on expertise in Oracle Field Service (OFS/OFSC), AI-driven automation, and AWS/Azure integration, I specialize in turning complex operational and technical landscapes into intuitive, high-performing products. My teams and I have delivered results that matter 40% efficiency improvements, double-digit revenue acceleration, and retention rates above 80% by staying grounded in customer needs and aligned with business strategy.
         <p>
         What I enjoy most is building clarity, collaboration, and momentum across engineering, design, sales, and customer success. I lead with empathy, analytical rigor, and a bias for action, ensuring that every product decision moves the business forward while enabling teams to perform at their highest level.
         <p>
@@ -411,6 +417,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
